<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WASTE BANK</string>
    <string name="Login">LOGIN</string>
    <string name="waste_bank">WASTE BANK</string>
    <string name="b_register">REGISTER</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="view_point">View Point</string>
    <string name="todo2">TODO</string>
    <string name="check_your_point">Check your Point</string>
    <string name="add">Add</string>
    <string name="check_your_progress">Check your Progress</string>
    <string name="progress">Progress</string>
    <string name="point_icon">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="about_us">About US</string>
    <string name="more_information">More Information!</string>
    <string name="go_to_website">GO TO WEBSITE</string>
    <string name="website">WEBSITE</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="password">Password</string>
    <string name="_873">873</string>
    <string name="username">Abdullah</string>
    <string name="address">address</string>
    <string name="points">420</string>
    <string name="cash">168</string>
    <string name="mail">enter your email</string>
    <string name="phone">Phone</string>
    <string name ="_1_202_555_0157" translatable="false">+1–202-555-0157</string>
    <string name="Address">Address</string>
    <string name="b139_elnargess_new_cairo_city">B139-Elnargess-New Cairo City</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Your_point">Your Points</string>
    <string name="money_cash">Cash</string>
    <string name="firist_graph">My First Bar Graph!</string>
    <string name="the_5_items_2_pound">5 points = 2 pound</string>
    <string name="your_balance">Your Balance =</string>
    <string name="save">Save</string>
    <string name="update_your_profile">Update Your Profile !</string>

    <string name="todo">TODO</string>
    <string name="_1_item_1_point" translatable="false">1 item = 1 point</string>
    <string name="change_language">change Language</string>
    <string name="facebook_app_id" translatable="false" />
    <string name="welcome" translatable="false">welcome</string>
    <string name = "fb_login_protocol_scheme" translatable="false" />
    <string name="cancel_login" translatable="false" />
    <string name="error_login" translatable="false" />



    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="waste_bank_aims_to_enhance_cooperation_soul_in_the_community_and_to_encourage_citizens_to_reduce_trash_and_population_by_offering_cashback_way_to_them_every_time_they_decide_to_throw_plastic_or_can_trash" translatable="false">WASTE BANK aims to enhance cooperation soul in the community and to encourage citizens to reduce trash and population by offering cashback way to them every time they decide to throw plastic or can trash.</string>
    <string name="waste_bank_provides_smart_enterprise_grade_waste_management_solutions_for_cities_and_businesses_to_cost_efficiently_manage_the_waste_lifecycle_and_improve_the_environment_and_well_being_of_people" translatable="false">WASTE BANK provides smart enterprise-grade waste management solutions for cities and businesses to cost-efficiently manage the waste lifecycle and improve the environment and well-being of people.</string>
    <string name="for_more_information_visit_https_wastebank_weebly" translatable="false">For more information visit https://wastebank.weebly.</string>
    <string name="fantastic_5_gmail_com" translatable="false">fantastic.5@gmail.com</string>
    <string name="fantastic_five" translatable="false">Fantastic Five</string>
    <string name="_266_225_225" translatable="false">+266 225 225</string>
    <string name="b139_new_cairo_egypt" translatable="false">B139-New Cairo-Egypt</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="your_email" translatable="false">your email</string>
    <string name="your_name" translatable="false">Your name</string>
    <string name="fake_point">6</string>
    <string name="_2_4">2.4</string>

</resources>
