<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background8"
    android:id="@+id/drawer"
    tools:context=".HomeActivity">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="554dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".HomeActivity">

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="194dp"
            android:background="#4DFFFFFF"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/view_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="85dp"
                        android:background="@drawable/cerclebackgroundgreen"
                        android:contentDescription="@string/point_icon"
                        android:padding="10dp"
                        android:src="@drawable/point" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/view_point"
                        android:textColor="#4B258F"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/check_your_point"
                        android:textColor="#4B258F" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/dark_blue" />


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="200dp"
            android:background="#4DFFFFFF"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/urlWeb"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="85dp"
                        android:background="@drawable/cerclebackgroundwhite"
                        android:contentDescription="@string/todo4"
                        android:padding="10dp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/website"
                        android:textColor="#4B258F"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/go_to_website"
                        android:textColor="#4B258F" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/dark_blue" />


                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/b_progress"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="87dp"
                        android:layout_height="85dp"
                        android:background="@drawable/cerclebackgroundgray"
                        android:contentDescription="@string/todo5"
                        android:padding="10dp"
                        android:src="@drawable/prog" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:text="@string/progress"
                        android:textColor="#4B258F"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/check_your_progress"
                        android:textColor="#4B258F" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/dark_blue" />


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"

            android:layout_height="149dp"
            android:background="#4DFFFFFF"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="UselessParent">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="146dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/b_about"

                        android:layout_width="65dp"
                        android:layout_height="60dp"
                        android:background="@drawable/cerclebackgrounddarkblue"

                        android:contentDescription="@string/todo6"
                        android:padding="10dp"
                        android:src="@drawable/ic_info_outline_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_us"
                        android:textColor="#4B258F"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/more_information"
                        android:textColor="#4B258F" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/dark_blue" />


                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:itemBackground="@color/grey"
        app:itemIconTint="@color/dark_blue"
        app:itemTextColor="@color/dark_blue"
        app:menu="@menu/nav_menu" />

    </RelativeLayout>
