<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editActivity"
    android:background="@color/graylight"
    android:orientation="vertical"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="309dp"
        tools:ignore="ExtraText">>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical"
            android:visibility="visible"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/ic_baseline_camera_alt_24"
                android:contentDescription="@string/todo"

                android:scaleType="centerCrop" />

            <EditText
                android:id="@+id/username"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:autofillHints="Your Name"
                android:text="@string/fantastic_five"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--  Name Label -->


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">



            <EditText
                android:id="@+id/email"
                android:drawableStart="@drawable/ic_baseline_bug_report_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <!-- Signup Button -->
        <Button

            android:id="@+id/b_save"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="#DD2196F3"
            android:padding="12dp"
            android:text="@string/save"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>