<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background8"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".aboutActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="255dp"
        android:layout_height="164dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo2"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/point_viewr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365"
        tools:ignore="MissingConstraints,UnknownIdInLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="410dp"
        android:layout_height="113dp"
        android:layout_marginEnd="1dp"
        android:text="@string/waste_bank_aims_to_enhance_cooperation_soul_in_the_community_and_to_encourage_citizens_to_reduce_trash_and_population_by_offering_cashback_way_to_them_every_time_they_decide_to_throw_plastic_or_can_trash"
        android:textAlignment="center"
        android:textColor="#151515"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="414dp"
        android:layout_height="128dp"
        android:text="@string/waste_bank_provides_smart_enterprise_grade_waste_management_solutions_for_cities_and_businesses_to_cost_efficiently_manage_the_waste_lifecycle_and_improve_the_environment_and_well_being_of_people"
        android:textAlignment="center"
        android:textColor="#151515"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="408dp"
        android:layout_height="51dp"
        android:text="@string/for_more_information_visit_https_wastebank_weebly"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.184"
        tools:ignore="MissingConstraints">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>

